<resources>
    <string name="app_name">Get Contact Friend</string>

    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="list">Friend List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sosial_media">Sosial Media</string>
    <string name="email">Email</string>
    <string name="telepon">Telepon</string>
    <string name="kelas">Kelas</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="contacts">Contacts</string>

</resources>
