<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="60dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:hint="@string/nim"
            android:minHeight="50dp"
            android:paddingStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:hint="@string/nama"
            android:minHeight="50dp"
            android:paddingStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:id="@+id/tv_kelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:hint="@string/kelas"
            android:minHeight="50dp"
            android:paddingStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/telepon"
            android:minHeight="50dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:hint="@string/email"
            android:minHeight="50dp"
            android:paddingStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:id="@+id/tv_sosmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical|start"
            android:hint="@string/sosial_media"
            android:minHeight="50dp"
            android:paddingStart="16dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    </LinearLayout>

</LinearLayout>
